# bravo

./: .gitignore  .mcp.json  CLAUDE.md  components.json  index.html  package-lock.json  package.json  vite.config.ts
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  railway.json
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_orders_kds.py  0003_payments.py  0004_payment_credentials.py  0005_invoices.py  0006_shifts.py  0007_presence.py  0008_inventory.py  0009_reservations.py  0010_sale_facts.py  0011_advisor_settings.py  0012_item_lifecycle_station.py  0013_cash_sessions.py  0014_payment_tip.py  0015_advisor_diagnostics.py  0016_user_name.py  0017_user_hourly_rate.py
backend/app/: __init__.py  config.py  container.py  context.py  main.py
backend/app/application/: __init__.py  clock.py
backend/app/domain/: __init__.py  errors.py
backend/app/infrastructure/: __init__.py
backend/app/presentation/: __init__.py  deps.py  errors.py  rbac.py
backend/evals/copilot/: README.md
backend/scripts/: fix_seed_prices.py  seed_demo.py  seed_more.py
backend/tests/fakes/: __init__.py
backend/tests/integration/: conftest.py  test_e2e_advisor.py  test_e2e_advisor_cache.py  test_e2e_analytics.py  test_e2e_auth.py  test_e2e_cashier.py  test_e2e_copilot.py  test_e2e_finance.py  test_e2e_floor.py  test_e2e_food_cost.py  test_e2e_integrations.py  test_e2e_inventory.py  test_e2e_invoices.py  test_e2e_labor_cost.py  test_e2e_me.py  test_e2e_orders.py  test_e2e_payments.py  test_e2e_presence.py  test_e2e_realtime.py  test_e2e_reopen.py  test_e2e_reports.py  test_e2e_reservations.py  test_e2e_staff_report.py  test_e2e_timeclock.py  test_e2e_tips.py  test_e2e_webhook.py  test_rls.py
backend/tests/unit/: test_advisor.py  test_advisor_cache.py  test_advisor_llm.py  test_auth_core.py  test_cash_session.py  test_config.py  test_copilot_evals.py  test_copilot_llm.py  test_copilot_sql_guard.py  test_credentials.py  test_domain.py  test_finance_overview.py  test_get_my_profile.py  test_inventory.py  test_invoice.py  (+14 more)
(+457 files in other folders)
